add shelters enumerable to print each shelter

--- a/app/views/shelters/index.html.erb
+++ b/app/views/shelters/index.html.erb
@@ -1,3 +1,6 @@
-<h1> All Shelters <h1>
+<h1> All Shelters </h1>
 
-  
+  <% @shelters.each do |shelter| %>
+    <h2><%= shelter.name %></h2>
+    <p><%= "Street Address: #{shelter.address}" %></p>
+  <% end %>
