add link to shelters/index view for "/shelters/new"

--- a/app/views/shelters/index.html.erb
+++ b/app/views/shelters/index.html.erb
@@ -4,3 +4,4 @@
     <h2><%= shelter.name %></h2>
     <p><%= "Street Address: #{shelter.address}" %></p>
   <% end %>
+<a href="/shelters/new">Create New Shelter</a>
