--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -3,3 +3,4 @@
 <h3>City: <%= @shelter.city %></h3>
 <h3>State: <%= @shelter.state %></h3>
 <h3>Zip: <%= @shelter.zip %></h3>
+<h3><a href="/shelters/<%= @shelter.id %>/edit">Update Shelter</h3>
