--- a/app/views/shelters/new.html.erb
+++ b/app/views/shelters/new.html.erb
@@ -1,5 +1,5 @@
 <h2>Fill out this form for a new shelter!</h2>
-<%= form_tag "/shelters" do %>
+<%= form_tag "/shelters", method: 'post' do %>
   <h4>Name: <%= text_field_tag 'shelter_name' %></h4>
   <h4>Address: <%= text_field_tag 'shelter_address' %></h4>
   <h4>City: <%= text_field_tag 'shelter_city' %></h4>
