--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -4,3 +4,7 @@
 <h3>State: <%= @shelter.state %></h3>
 <h3>Zip: <%= @shelter.zip %></h3>
 <h3><a href="/shelters/<%= @shelter.id %>/edit">Update Shelter</h3>
+<%= link_to "Delete Shelter", "/shelters/#{@shelter.id}", :method => :delete %>
+
+<!-- links always perform gets -->
+<!-- link to "Delete Shelter", "path", method: :delete -->
