--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -1,10 +1,7 @@
-<h3>Name: <%= @shelter.name %></h3>
-<h3>Address: <%= @shelter.address %></h3>
+<h3 id = "name">Name: <%= @shelter.name %></h3>
+<h3 class = "address">Address: <%= @shelter.address %></h3>
 <h3>City: <%= @shelter.city %></h3>
 <h3>State: <%= @shelter.state %></h3>
 <h3>Zip: <%= @shelter.zip %></h3>
 <h3><a href="/shelters/<%= @shelter.id %>/edit">Update Shelter</h3>
 <%= link_to "Delete Shelter", "/shelters/#{@shelter.id}", :method => :delete %>
-
-<!-- links always perform gets -->
-<!-- link to "Delete Shelter", "path", method: :delete -->
