--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,7 +1,7 @@
 <h2>All Pets</h2>
   <%@pets.each do |pet|%>
   <img src="<%=  pet.image %>" alt="<%= pet.image %>" style="width:200px">
-  <h4>Name: <%= pet.name %></h4>
+  <h4><a href="/pets/<%= pet.id %>">Name: <%= pet.name %></a></h4>
   <h4>Approximate Age: <%= pet.approximate_age %></h4>
   <h4>Sex: <%= pet.sex %></h4>
   <h4>Shelter Name: <%= pet.shelter_name %></h4>
