--- a/app/views/shelters/display.html.erb
+++ b/app/views/shelters/display.html.erb
@@ -1,4 +1,4 @@
-<h2>All Pets for <%= @shelter.name %> Shelter</h2>
+<h2>All Pets for "<%= @shelter.name %>" Shelter</h2>
   <%@shelter.pets.each do |pet|%>
   <img src="<%=  pet.image %>" alt="<%= pet.image %>" style="width:200px">
   <h4>Name: <%= pet.name %></h4>
