--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -5,4 +5,5 @@
   <h4>Approximate Age: <%= @pet.approximate_age %></h4>
   <h4>Sex: <%= @pet.sex %></h4>
   <h4>Adoption Status: <%= @pet.adoption_status %></h4>
+  <h4><a href='/pets/<%= @pet.id %>/edit'>Update <%= @pet.name %>'s information!</a></h4>
   </p>
