add submit tag for edit view

--- a/app/views/pets/edit.html.erb
+++ b/app/views/pets/edit.html.erb
@@ -5,4 +5,5 @@
   <h4>Description: <%= text_field_tag 'pet_description' %></h4>
   <h4>Approximate Age: <%= text_field_tag 'pet_approximate_age' %></h4>
   <h4>Sex: <%= text_field_tag 'pet_sex' %>
+  <%= submit_tag 'Update' %>
 <% end %>
