Add delete link in show view for pets

--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -6,4 +6,5 @@
 <h4>Sex: <%= @pet.sex %></h4>
 <h4>Adoption Status: <%= @pet.adoption_status %></h4>
 <h4><a href='/pets/<%= @pet.id %>/edit'>Update <%= @pet.name %>'s information!</a></h4>
+<%=link_to "Delete #{@pet.name}'s whole existence! Go ahead!", "/pets/#{@pet.id}", :method => :delete%>
 </p>
