add links (shelters and pets) in welcome index

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,3 @@
 <h1> Welcome to Adopt, Don't Shop!<h1>
+  <p><%=link_to "All Shelters", "/shelters"%></p>
+  <p><%=link_to "All Pets", "/pets"%></p>
