--- a/app/views/shelters/index.html.erb
+++ b/app/views/shelters/index.html.erb
@@ -2,7 +2,10 @@
 
   <% @shelters.each do |shelter| %>
     <h2><a href="/shelters/<%= shelter.id %>"><%= shelter.name %></a>
-    <h4><a href="/shelters/<%= shelter.id %>/edit">Edit <%= shelter.name %></a>
-    </h4></h2>
+      <form action="/shelters/<%= shelter.id %>/edit">
+        <button type="submit">Edit <%= shelter.name %></button>
+      </form>
+    </h2>
+
   <% end %>
 <a href="/shelters/new">Create New Shelter</a>
