add html for edit on pets index

--- a/app/views/shelters/display.html.erb
+++ b/app/views/shelters/display.html.erb
@@ -1,9 +1,10 @@
-<h2>All Pets for "<%= @shelter.name %>" Shelter</h2>
+<h2>All Pets for "<%= @shelter.name %>"</h2>
   <%@shelter.pets.each do |pet|%>
   <img src="<%=  pet.image %>" alt="<%= pet.image %>" style="width:200px">
   <h4>Name: <%= pet.name %></h4>
   <h4>Approximate Age: <%= pet.approximate_age %></h4>
   <h4>Sex: <%= pet.sex %></h4>
-  </p>
+  <%=button_to "Edit #{pet.name}'s info!", "/pets/#{pet.id}/edit", :method => :get%>
+  <p><%=button_to "Delete #{pet.name}", "/pets/#{pet.id}", :method => :delete%></p>
   <% end %>
   <h4><a href="/shelters/<%= @shelter.id %>/pets/new">Add Pet</a><h4>
