--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -5,5 +5,7 @@
   <h4>Approximate Age: <%= pet.approximate_age %></h4>
   <h4>Sex: <%= pet.sex %></h4>
   <h4>Shelter Name: <%= pet.shelter_name %></h4>
+  <%=button_to "Edit #{pet.name}'s info!", "/pets/#{pet.id}/edit", :method => :get%>
+  <p><%=button_to "Delete #{pet.name}", "/pets/#{pet.id}", :method => :delete%></p>
   </p>
   <% end %>
