--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
   <body>
     <navbar>
-      <h3><p><%=link_to "All Pets", "/pets"%></p></h3>
+      <%=link_to "All Pets", "/pets"%>
     </navbar>
     <%= yield %>
   </body>
