--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,3 @@
 <h1> Welcome to Adopt, Don't Shop!<h1>
-  <p><%=link_to "All Shelters", "/shelters"%></p>
+
+<h4> You can access all of our shelters and/or all of our pets through the links above. </h4>
