--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   <body>
     <navbar>
       <%=link_to "All Pets", "/pets"%>
+      <%=link_to "All Shelters", "/shelters"%>
     </navbar>
     <%= yield %>
   </body>
