--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,19 @@
     <%= javascript_include_tag 'application' %>
   </head>
 
+  <div class="topnav">
+    <%=link_to "All Pets", "/pets"%>
+    <%=link_to "All Shelters", "/shelters"%>
+  </div>
+
+
   <body>
-    <navbar>
-      <%=link_to "All Pets", "/pets"%>
-      <%=link_to "All Shelters", "/shelters"%>
-    </navbar>
     <%= yield %>
   </body>
+
+  <div class="footer">
+    <p>Thank you for visiting our site!
+      Do not hesitate to contact us at 1-800-NOPE!</p>
+  </div>
+
 </html>
