--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,9 +13,49 @@
  *= require_tree .
  *= require_self
  */
-#name {
-  color: yellow;
+
+body {
+  background: #FFFFF0;
+  color: #111;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 32px;
+  margin: 0 0 0;
+  text-align: center;
+  position: relative;
 }
-.address {
-  color: yellow;
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: ForestGreen;
+  color: white;
+  text-align: center;
+}
+
+.topnav {
+  background-color: #8B0000;
+  overflow: hidden;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 30px;
+  text-decoration: underline;
+  font-size: 16px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
 }
